--- a/package.json
+++ b/package.json
@@ -3,25 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "lint": "next lint",
+    "lint-staged": "lint-staged",
+    "start": "next start"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
+  },
+  "pre-commit": [
+    "lint",
+    "format:fix"
+  ],
   "dependencies": {
+    "next": "^14.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "^14.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3",
     "eslint": "^8",
-    "eslint-config-next": "^14.0"
+    "eslint-config-next": "^14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33",
+    "eslint-plugin-react-hooks": "^4.6",
+    "lint-staged": "^15.2",
+    "postcss": "^8",
+    "pre-commit": "^1.2",
+    "prettier": "^3.2",
+    "prettier-plugin-tailwindcss": "^0.5",
+    "tailwindcss": "^3.3",
+    "typescript": "^5"
   }
 }
