--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alpha-react-app",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -9,7 +9,9 @@
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "lint": "next lint",
     "lint-staged": "lint-staged",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --fix"
@@ -24,21 +26,32 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23",
+    "@babel/preset-react": "^7.23",
+    "@testing-library/jest-dom": "^6.2",
+    "@testing-library/react": "^14.1",
+    "@types/jest": "^29.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0",
+    "babel-jest": "^29.7",
     "eslint": "^8",
     "eslint-config-next": "^14.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^9.1",
     "eslint-plugin-react": "^7.33",
     "eslint-plugin-react-hooks": "^4.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7",
     "lint-staged": "^15.2",
     "postcss": "^8",
     "pre-commit": "^1.2",
     "prettier": "^3.2",
     "prettier-plugin-tailwindcss": "^0.5",
+    "react-test-renderer": "^18.2",
     "tailwindcss": "^3.3",
+    "ts-jest": "^29.1",
+    "ts-node": "^10.9",
     "typescript": "^5"
   }
 }
