--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,9 @@
     "plugin:react-hooks/recommended",
     "plugin:react/recommended",
     "prettier"
-  ]
+  ],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off"
+  }
 }
