Add the ability to run e2e tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,30 @@
     "next/core-web-vitals",
     "plugin:react-hooks/recommended",
     "plugin:react/recommended",
-    "prettier"
+    "prettier",
+    "plugin:cypress/recommended",
+    "plugin:chai-friendly/recommended"
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "react/jsx-uses-react": "off"
+    "react/jsx-uses-react": "off",
+    "cypress/no-assigning-return-values": "error",
+    "cypress/no-unnecessary-waiting": "error",
+    "cypress/unsafe-to-chain-command": "error",
+    "cypress/assertion-before-screenshot": "warn",
+    "cypress/no-force": "warn",
+    "cypress/no-async-tests": "error",
+    "cypress/no-pause": "error",
+    "no-unused-expressions": 0,
+    "chai-friendly/no-unused-expressions": 2
+  },
+  "plugins": ["cypress", "chai-friendly"],
+  "env": {
+    "cypress/globals": true,
+    "es6": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2022
   }
 }
