--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "alpha-react-app",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "build": "next build",
+    "cypress:open": "cypress open",
     "dev": "next dev",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
@@ -31,27 +32,41 @@
     "@testing-library/jest-dom": "^6.2",
     "@testing-library/react": "^14.1",
     "@types/jest": "^29.5",
+    "@types/mochawesome": "^6.2.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0",
+    "autoprefixer": "^10.4",
     "babel-jest": "^29.7",
+    "cypress": "^13.6",
     "eslint": "^8",
     "eslint-config-next": "^14.0",
     "eslint-config-prettier": "^9.1",
+    "eslint-plugin-chai-friendly": "^0.7",
+    "eslint-plugin-cypress": "^2.15",
     "eslint-plugin-react": "^7.33",
     "eslint-plugin-react-hooks": "^4.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7",
     "lint-staged": "^15.2",
+    "mochawesome": "^7.1",
+    "mochawesome-merge": "^4.3",
+    "mochawesome-report-generator": "^6.2",
     "postcss": "^8",
     "pre-commit": "^1.2",
     "prettier": "^3.2",
     "prettier-plugin-tailwindcss": "^0.5",
     "react-test-renderer": "^18.2",
-    "tailwindcss": "^3.3",
+    "tailwindcss": "^3.4",
     "ts-jest": "^29.1",
     "ts-node": "^10.9",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "chrome 64",
+    "edge 79",
+    "firefox 67",
+    "opera 51",
+    "safari 12"
+  ]
 }
