--- a/.github/workflows/tests.js.yml
+++ b/.github/workflows/tests.js.yml
@@ -1,30 +1,60 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  workflow_call:
 
 jobs:
-  build:
-
+  tests:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
+    env:
+      TEST_LOGIN: ${{ vars.TEST_LOGIN }}
+      TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
+    defaults:
+      run:
+        working-directory: .
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - name: Git checkout repo
+        uses: actions/checkout@v4
+
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: "**/package-lock.json"
+
+      - name: Install NPM packages and build
+        run: npm ci && npm run build
+
+      - name: Start App
+        run: npm run start
+
+      - name: Run E2E tests in the Chrome browser
+        uses: cypress-io/github-action@v6
+        with:
+          working-directory: .
+          config: defaultCommandTimeout=10000,video=true,retries=2
+          browser: chrome
+          quiet: true
+
+      - name: Make E2E test report
+        if: ${{ always() }}
+        run: |
+          npx mochawesome-merge coverage/cypress/results/*.json > coverage/cypress/results/combined.json
+          npx marge coverage/cypress/results/combined.json -f e2e -t "HTDL E2E" -p "HTDL E2E test report" -o coverage/cypress/
+          rm -rf coverage/cypress/results
+          rm -rf coverage/phpunit.cache
+
+      - name: Upload all test reports
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: all-test-reports
+          path: |
+            coverage/**/*
+          if-no-files-found: ignore
+          retention-days: 7
