--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "cypress:open": "cypress open",
     "dev": "next dev",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "lint": "next lint",
     "lint-staged": "lint-staged",
     "start": "next start",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test:e2e": "cypress open --e2e --config baseUrl='http://localhost:3000'",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --fix"
