--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "format:fix"
   ],
   "dependencies": {
-    "next": "^14.0",
+    "@formatjs/intl-localematcher": "^0.5",
+    "negotiator": "^0.6",
+    "next": "^14.1",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -32,21 +34,23 @@
     "@testing-library/jest-dom": "^6.2",
     "@testing-library/react": "^14.1",
     "@types/jest": "^29.5",
-    "@types/mochawesome": "^6.2.4",
+    "@types/mochawesome": "^6.2",
+    "@types/negotiator": "^0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4",
-    "babel-jest": "^29.7",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.6",
     "eslint": "^8",
-    "eslint-config-next": "^14.0",
+    "eslint-config-next": "^14.1",
     "eslint-config-prettier": "^9.1",
     "eslint-plugin-chai-friendly": "^0.7",
     "eslint-plugin-cypress": "^2.15",
+    "eslint-plugin-jest-dom": "^5.1",
     "eslint-plugin-react": "^7.33",
     "eslint-plugin-react-hooks": "^4.6",
-    "jest": "^29.7.0",
+    "jest": "^29.7",
     "jest-environment-jsdom": "^29.7",
     "lint-staged": "^15.2",
     "mochawesome": "^7.1",
